--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-tailwind": "npx @tailwindcss/cli -i ./src/style.css -o ./dist/assets/css/style.css --watch"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "pinia": "^2.3.1",
+    "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -19,7 +22,6 @@
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
 }
